--- a/index.html
+++ b/index.html
@@ -5,95 +5,123 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event_Promotions</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Promotions</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div id="webapp">
+        <header id="header">
+            <nav class="navbar">
+                <ul class="menu">
+                    <li class="items_menu">
+                        <a class="im" href="">Shop</a>
+                    </li>
+                    <li class="items_menu">
+                        <a class="im" href="">Offers</a>
+                    </li>
+                    <li class="items_menu">
+                        <a class="im" href="">Our story</a>
+                    </li>
+                    <li class="items_menu">
+                        <a class="im" href="">Blog</a>
+                    </li>
+                </ul>
+                <div class="logo">
+                    <img src="./0_Event promotions/Image 1.png" alt="">
+                </div>
+                <div>
+                    <ul class="menu">
+                        <a class="user_do_something" href="">
+                            <input class="search" type="text" placeholder=" Search products">
+                        </a>
+                        <a class="user_do_something">
+                            <div>
+                                <img src="./0_Event promotions/Button 1.png" alt="">
+                            </div>
+                        </a>
+                        <a class="user_do_something" href="">
+                            <div>
+                                <img src="./0_Event promotions/Avatar 1.png " alt=" ">
+                            </div>
+                        </a>
+                    </ul>
+                </div>
 
-    <div class="header">
-        <div id="left">
-            <div>shop</div>
-            <div>offers</div>
-            <div>our story</div>
-            <div>blog</div>
-        </div>
-        <div id="logo">
-            <img src="./0_Event promotions/ promotions/logo.png" alt="">
-        </div>
-        <div id="right">
-            <div>
-                <input type="text">
-            </div>
-            <div>
-                <img src="./0_Event promotions/Button 1.png" alt="">
-            </div>
-            <div>
-                <img src="./0_Event promotions/Avatar 1.png" alt="">
-            </div>
-        </div>
-    </div>
-    <div>
-        <theme>
-            <div class="center">
-                <h1>Promotions</h1>
-            </div>
-        </theme>
-    </div>
+            </nav>
+        </header>
 
-    <div class="grid-container">
-        <div class="grid-item">
-            <div class="promotiions tittle">
-                <img src="./0_Event promotions/Image 1 (1).png" , width="150" , height="150">
+        <div id="container">
+            <div class="tittle_container">
+                <h1 class="tc">
+                    Promotions
+                </h1>
+            </div>
+            <div class="content">
+                <div class="north"></div>
+                <div class="center">
+                    <div class="items_center">
+                        <img src="./0_Event promotions/Image 1 (1).png" alt="">
+                    </div>
+                    <div class="items_center">
+                        <div class="tittle_items_center">
+                            <h2 class="tic1">
+                                Promotion Tilte
+                            </h2>
+                            <p class="tic2">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
+                            </p>
+                            <i class="tic3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            </i>
+                            <button class="tic4">Shop now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="center">
+                    <div class="items_center">
+                        <img src="./0_Event promotions/Image 1 (1).png" alt="">
+                    </div>
+                    <div class="items_center">
+                        <div class="tittle_items_center">
+                            <h2 class="tic1">
+                                Promotion Tilte
+                            </h2>
+                            <p class="tic2">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
+                            </p>
+                            <i class="tic3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            </i>
+                            <button class="tic4">Shop now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="center">
+                    <div class="items_center">
+                        <img src="./0_Event promotions/Image 1 (1).png" alt="">
+                    </div>
+                    <div class="items_center">
+                        <div class="tittle_items_center">
+                            <h2 class="tic1">
+                                Promotion Tilte
+                            </h2>
+                            <p class="tic2">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
+                            </p>
+                            <i class="tic3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            </i>
+                            <button class="tic4">Shop now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="south"></div>
             </div>
         </div>
-        <div class="grid-item">
-            <div>
-                <h6> Promotinon tittle</h6>
-                <p>Lorem ipsum dolor sit amet consectetur
-                    <br> adipisicing elit.Cupiditate voluptatem
-                    <br> rerum iusto quisquam, reiciendis dolor
-                    <br> impedit quaerat, deleniti mollitia ten
-                    <br> ratione nesciunt, ad modi? Exercitatio
-                </p>
-                <button>Show now</button>
-            </div>
-        </div>
-        <div class="grid-item">
-            <div>
-                <h6> Promotinon tittle</h6>
-                <p>Lorem ipsum dolor sit amet consectetur
-                    <br> adipisicing elit.Cupiditate voluptatem
-                    <br> rerum iusto quisquam, reiciendis dolor
-                    <br> impedit quaerat, deleniti mollitia ten
-                    <br> ratione nesciunt, ad modi? Exercitatio
-                </p>
-                <button>Show now</button>
-            </div>
-        </div>
-        <div class="grid-item">
-            <div class="promotiions tittle">
-                <img src="./0_Event promotions/Image 1 (2).png" , width="150" , height="150">
-            </div>
-        </div>
-        <div class="grid-item">
-            <div class="promotiions tittle">
-                <img src="./0_Event promotions/Image 1 (3).png" , width="150" , height="150">
-            </div>
-        </div>
-        <div class="grid-item">
-            <div>
-                <h6> Gift for your skin</h6>
-                <p>Lorem ipsum dolor sit amet consectetur
-                    <br> adipisicing elit.Cupiditate voluptatem
-                    <br> rerum iusto quisquam, reiciendis dolor
-                    <br> impedit quaerat, deleniti mollitia ten
-                    <br> ratione nesciunt, ad modi? Exercitatio
-                </p>
-                <button>Show now</button>
-            </div>
-        </div>
-        <div>
+
+    </div>
 </body>
 
 </html>
