update tuan 4 version 3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="navbar">
                 <ul class="menu">
                     <li class="items_menu">
-                        <a class="im" href="">Shop</a>
+                        <a class="im" href="https://www.uniime.net/embed/viptus.php?slug=qUl5d5kbzTdczzdquRahn04kV1CWfbVtYGjftOkjifFST0c0tj&sever=jw">Shop</a>
                     </li>
                     <li class="items_menu">
                         <a class="im" href="">Offers</a>
@@ -50,41 +50,38 @@
 
             </nav>
         </header>
-
         <div id="container">
-            <div class="tittle_container">
-                <h1 class="tc">
-                    Promotions
-                </h1>
+            <div class="north">
+                <div class="tittle_container">
+                    <h1 class="tc">
+                        Promotions
+                    </h1>
+                </div>
             </div>
-            <div class="content">
-                <div class="north"></div>
-                <div class="center">
-                    <div class="items_center">
+            <div class="center">
+                <div class="content">
+                    <div class="items_content">
                         <img src="./0_Event promotions/Image 1 (1).png" alt="">
                     </div>
-                    <div class="items_center">
-                        <div class="tittle_items_center">
+                    <div class="items_content">
+                        <div class="tittle_items_content">
                             <h2 class="tic1">
                                 Promotion Tilte
                             </h2>
                             <p class="tic2">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo perferendis tempore veritatis totam cumque unde aliquam cupiditate autem atque necessitatibus distinctio quo non animi obcaecati tempora, libero maxime aspernatur. Beatae.
                             </p>
                             <i class="tic3">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             </i>
                             <button class="tic4">Shop now</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="center">
-                    <div class="items_center">
-                        <img src="./0_Event promotions/Image 1 (1).png" alt="">
-                    </div>
-                    <div class="items_center">
-                        <div class="tittle_items_center">
+                <div class="content">
+                    <div class="items_content">
+                        <div class="tittle_items_content">
                             <h2 class="tic1">
                                 Promotion Tilte
                             </h2>
@@ -92,35 +89,92 @@
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
                             </p>
                             <i class="tic3">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                             </i>
                             <button class="tic4">Shop now</button>
                         </div>
                     </div>
-                </div>
-                <div class="center">
-                    <div class="items_center">
-                        <img src="./0_Event promotions/Image 1 (1).png" alt="">
+                    <div class="items_content">
+                        <img src="./0_Event promotions/Image 1 (2).png" alt="">
                     </div>
-                    <div class="items_center">
-                        <div class="tittle_items_center">
-                            <h2 class="tic1">
-                                Promotion Tilte
+                </div>
+                <div class="content">
+                    <div class="items_content">
+                        <img src="./0_Event promotions/Image 1 (3).png" alt="">
+                    </div>
+                    <div class="items_content">
+                        <div class="tittle_items_content">
+                            <h2 class="tic5">
+                                Gift for your skin
                             </h2>
                             <p class="tic2">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi. Fugit placeat provident blanditiis alias voluptates molestias.
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quos autem, error debitis quo deserunt, cum consequatur suscipit iste doloribus architecto, excepturi commodi.
                             </p>
-                            <i class="tic3">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            </i>
                             <button class="tic4">Shop now</button>
                         </div>
                     </div>
                 </div>
-                <div class="south"></div>
             </div>
+            <div class="south"></div>
         </div>
 
+        <footer class=" footer">
+            <div class="learn_more">
+                <ul class="lm_to">
+                    <li class="lm_heading">About</li>
+                    <li class="lm_properties">Home</li>
+                    <li class="lm_properties">Shop</li>
+                    <li class="lm_properties">Our story</li>
+                    <li class="lm_properties">Blogs</li>
+                    <li class="lm_properties">
+                        <select class="select-lang" name="" id="">
+                            <option value="">English</option>
+                            <option value="">Indian</option>
+                        </select>
+                    </li>
+                </ul>
+                <ul class="lm_to">
+                    <li class="lm_heading">Help</li>
+                    <li class="lm_properties">Shipping & Returns</li>
+                    <li class="lm_properties">Track Order</li>
+                    <li class="lm_properties">FAQs</li>
+
+                </ul>
+                <ul class="lm_to">
+                    <li class="lm_heading">Contact</li>
+                    <li class="lm_properties">Phone:</li>
+                    <li style="font-weight: bold;" class="lm_properties">(+84) 1234567890</li>
+                    <li class="lm_properties">Email</li>
+                    <li style="font-weight: bold;" class="lm_properties">danguym@gmail.com</li>
+                </ul>
+            </div>
+            <div class="learn_more">
+                <ul class="lm_to">
+                    <li class="lm_heading">Receive new promotions</li>
+                    <li class="lm_properties">Lorem, ipsum dolor sit amet consectetur.</li>
+                    <li class="lm_properties">
+                        <i class="lm_email_icon"></i>
+                        <input class="textfield" type="" placeholder="Input your email">
+                        <button class="textfield button">Subscribe</button>
+                    </li>
+                    <li class="lm_icon">
+                        <ul>
+                            <img src="./0_Event promotions/Twitter 1.png" style="margin-right: 20px" alt="">
+                            <img src="./0_Event promotions/Facebook 1.png" style="margin-right: 20px" alt="">
+                            <img src="./0_Event promotions/LinkedIn 1.png" style="margin-right: 20px" alt="">
+                            <img src="./0_Event promotions/YouTube 1.png" alt="">
+                        </ul>
+                    </li>
+                    <li class="lm_properties">
+                        <ul class="other">
+                            <li class="other_to"> @2022 Brand, Inc</li>
+                            <li class="other_to">⁜ Privacy</li>
+                            <li class="other_to">⁜ Terms</li>
+                            <li class="other_to">⁜ Sitemap</li>
+                        </ul>
+                    </li>
+            </div>
+        </footer>
     </div>
 </body>
 
